Fix overflow for note state

--- a/src/components/NoteState/NoteState.scss
+++ b/src/components/NoteState/NoteState.scss
@@ -8,6 +8,7 @@
   user-select: none;
   margin-left: 15px;
   margin-right: 10px;
+  position: relative;
 
   @include ie11 { // for IE11 only
     padding-left: 0px;
@@ -41,7 +42,6 @@
 
   .note-state-options {
     @include button-reset;
-    top: 40px;
     font-size: inherit;
     display: flex;
     flex-direction: column;
@@ -51,6 +51,14 @@
     border-radius: 4px;
     background: var(--component-background);
 
+    &.bottom {
+      top: calc(100% + 2px);
+    }
+
+    &.top {
+      bottom: calc(100% + 2px);
+    }
+
     .note-state-option {
       display: flex;
       flex-direction: row;
@@ -58,6 +66,7 @@
       height: 35px;
       padding: 8px;
       border-radius: 0px;
+      white-space: nowrap;
 
       .Icon, .share-type-icon {
         margin-right: 5px;
